Fixed sidephoto bottom issue and login/registration link overlap issue

--- a/src/components-css/landing-page.css
+++ b/src/components-css/landing-page.css
@@ -5,7 +5,7 @@
 
 .side-photo {
   position: fixed;
-  height: 100%;
+  height: 105%;
   width: 50%;
   background-image: url("https://s15.postimg.cc/rm98sqk23/Bryce2.jpg");
   background-size: cover;
@@ -61,7 +61,6 @@
   display: none;
 }
 
-
 @media only screen and (max-width: 620px){
   .side-photo-cover {
     background-color: rgba(255, 255, 255, 0.5);
@@ -71,7 +70,7 @@
 
   .side-photo {
     width: 100%;
-    height: 100%;
+    height: 110%;
   }
 
   .logo-landing {
